k8s/media/sonarr/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: sonarr
  template:
    metadata:
      labels:
        component: sonarr
    spec:
      containers:
        - name: sonarr
          image: docker.io/linuxserver/sonarr:3.0.8-develop
          imagePullPolicy: Always
          ports:
            - name: sonarr
              containerPort: 8989
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 10
            periodSeconds: 20
          volumeMounts:
            - name: media-data
              mountPath: /config
              subPath: config/sonarr
            - name: media-data
              mountPath: /downloads
              subPath: downloads
            - name: media-data
              mountPath: /tv
              subPath: medias/tv
      volumes:
        - name: media-data
          persistentVolumeClaim:
            claimName: media-data
        - name: init-files-sonarr
          configMap:
            defaultMode: 493
            name: init-sonarr-cm
