k8s/media/sonarr/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: media-ingress-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  rules:
  - host: sonarr.media.k8s.prrlvr.fr
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sonarr
              port:
                name: sonarr
  tls:
    - hosts:
        - sonarr.media.k8s.prrlvr.fr
      secretName: sonarr-media-tls
